[package]
name = "gpucodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gpu_common = { path = "../common" }
amf = { path = "../amf" }
nv = { path = "../nv" }
vpl = { path = "../vpl" }

[build-dependencies]
cc = "1.0"
bindgen = "0.65"

[dev-dependencies]
env_logger = "0.9"
capture = { path = "../capture" }
render = { path = "../render" }
