[package]
name = "hwcodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hw_common = { path = "../hw_common" }
amf = { path = "../amf" }
nvidia = { path = "../nvidia" }
intel = { path = "../intel" }

[build-dependencies]
cc = "1.0"
bindgen = "0.59"

[dev-dependencies]
env_logger = "0.9"
duplication = { path = "../duplication" }
platform = { path = "../platform" }
